--- a/extension/try.css
+++ b/extension/try.css
@@ -1,5 +1,5 @@
 .balloon1 {
-    position: relative;
+    position: fix;
     display: inline-block;
     margin: 1.5em 0;
     padding: 7px 10px;
@@ -9,9 +9,11 @@
     font-size: 16px;
     background: #e0edff;
     border-radius: 15px;
+    z-index:1;
+
   }
   
-  .balloon1:before {
+  /* .balloon1:before {
     content: "";
     position: absolute;
     top: 100%;
@@ -19,13 +21,10 @@
     margin-left: -15px;
     border: 15px solid transparent;
     border-top: 15px solid #e0edff;
-  }
+    z-index:1;
+  } */
   
   .balloon1 p {
     margin: 0;
     padding: 0;
-  }
-
-  input{
-    padding:3px;
   }
